<resources>
    <string name="app_name">napoleon-test-shop</string>
    <string name="checkout_header">Оформление заказа</string>
    <string name="checkout_shopping_cart">Корзина:</string>
    <string name="checkout_price">Цена без скидки:</string>
    <string name="checkout_discount">Размер скидки:</string>
    <string name="checkout_total_price">Итоговая цена:</string>
    <string name="checkout_last_name">Фамилия</string>
    <string name="checkout_first_name">Имя</string>
    <string name="checkout_patronymic">Отчество</string>
    <string name="checkout_pay">Оплатить</string>
    <string name="checkout_payment_option">Выбрать способ оплаты:</string>
    <string name="checkout_pay_by_cash">Оплата наличными</string>
    <string name="checkout_pay_by_card">Оплата картой при получении</string>
    <string name="checkout_phone">Телефон</string>
    <string name="checkout_phone_hint">Пример, 89999999999 или +79999999999</string>
</resources>
