<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/checkoutScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/checkoutHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/checkout_header"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/checkoutShoppingCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/checkout_shopping_cart"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkoutHeader" />

            <TextView
                android:id="@+id/checkoutPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/checkout_price"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkoutShoppingCart" />

            <TextView
                android:id="@+id/checkoutDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/checkout_discount"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/checkoutPrice"
                app:layout_constraintTop_toBottomOf="@+id/checkoutPrice" />

            <TextView
                android:id="@+id/checkoutTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/checkout_total_price"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/checkoutPrice"
                app:layout_constraintTop_toBottomOf="@+id/checkoutDiscount" />

            <TextView
                android:id="@+id/checkoutPriceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/checkoutPrice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/checkoutPrice"
                tools:text="1000,00 ₽" />

            <TextView
                android:id="@+id/checkoutDiscountValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/checkoutDiscount"
                app:layout_constraintStart_toStartOf="@+id/checkoutPriceValue"
                app:layout_constraintTop_toTopOf="@+id/checkoutDiscount"
                tools:text="10 %" />

            <TextView
                android:id="@+id/checkoutTotalPriceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/checkoutTotalPrice"
                app:layout_constraintStart_toStartOf="@+id/checkoutDiscountValue"
                app:layout_constraintTop_toTopOf="@+id/checkoutTotalPrice"
                tools:text="900,00 ₽" />

            <EditText
                android:id="@+id/checkoutLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/checkout_last_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkoutTotalPrice" />

            <EditText
                android:id="@+id/checkoutFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/checkout_first_name"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/checkoutLastName"
                app:layout_constraintTop_toBottomOf="@+id/checkoutLastName" />

            <EditText
                android:id="@+id/checkoutPatronymic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/checkout_patronymic"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/checkoutFirstName"
                app:layout_constraintTop_toBottomOf="@+id/checkoutFirstName" />

            <EditText
                android:id="@+id/checkoutPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/checkout_phone"
                android:inputType="phone"
                app:layout_constraintStart_toStartOf="@+id/checkoutPatronymic"
                app:layout_constraintTop_toBottomOf="@+id/checkoutPatronymic" />

            <Button
                android:id="@+id/checkoutPay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="18dp"
                android:background="@color/colorPrimary"
                android:text="@string/checkout_pay"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <TextView
                android:id="@+id/checkoutPaymentOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/checkout_payment_option"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkoutPhone" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toTopOf="@+id/checkoutPay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkoutPaymentOption">

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkout_pay_by_cash"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkout_pay_by_card"
                    android:textColor="@color/black" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>